--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/iconjs.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/iconjs.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-16x16.png">
+    <link rel="manifest" href="./src/assets/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
@@ -16,18 +17,3 @@
 
 <html lang="en">
 
-<!-- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
-
-   Put your site title here 
-  <title>
-    Jane Smith | A Front-End Developer based in London, UK
-  </title>
-
-  <meta name="description" content="Add small description of yourslef.">
-  Add some coding keywords below, Ex: (React, CSS etc)
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
-  <link rel="stylesheet" href="index.css" />
-</head> -->
